Fix the carousel on IE7 + fix the styling of the button on IE7.

--- a/app/assets/stylesheets/imports/public/_devcms_core_carrousels.sass
+++ b/app/assets/stylesheets/imports/public/_devcms_core_carrousels.sass
@@ -40,16 +40,16 @@
     display: block
     filter: alpha(opacity=50)
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"
-    font-size: 3em
+    font-size: 20px
     height: 25px
-    line-height: 0.55em
+    line-height: 20px
     margin-top: -15px
     opacity: 0.5
     position: absolute
-    text-decoration: none
-    width: 25px
     text-align: center
+    text-decoration: none
     top: 50%
+    width: 25px
     visibility: hidden
     z-index: 5
   .carousel-control-right
@@ -58,14 +58,16 @@
     .carousel-control
       visibility: visible
 .carousel-content-wrapper
-  width: 230px
+  display: block
   overflow: hidden
+  position: relative
+  width: 230px
 .carousel-content
   width: 25000px
   .slide
-    width: 230px
     padding-right: 10px
     position: relative
+    width: 230px
     a
       img
         display: block
